add packagest to waybar

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -108,6 +108,7 @@ window#waybar.hidden {
 #custom-weather.snowyIcyNight,
 #custom-weather.default,
 #custom-download_speed,
+#custom-pkgs,
 #custom-low-ports,
 #custom-ip-internal,
 #custom-ip-external {
